Created reloadable fabricLoader
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>